[tool.poetry]
name = "masters-sand-box"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipykernel = "^5.3.4"
notebook = "^6.1.3"
pandas = "^1.1.2"
spacy = "^2.3.2"
loguru = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
